--- a/css/style.css
+++ b/css/style.css
@@ -154,9 +154,8 @@ span{
 /*navbar part goes here*/
 
 .bg{
-    background-color: #ffffff;
+    background-color: #dddd;
     width: 100%;
-    height: -70px;
     position: fixed;
     top: 0;
     left: 0;
@@ -165,7 +164,7 @@ span{
 }
 
 @keyframes bg{
-    from{top:-50px;}
+    from{top:-70px;}
     to{ top:0;}
 
 }
@@ -176,6 +175,11 @@ span{
     width: 100px;
     padding-top: 30px;
     padding-bottom: 40px;
+    transition: all linear .4s;
+}
+.bg .logo{
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 .navbar{
     padding-left: 90px;
@@ -195,6 +199,9 @@ span{
     text-transform: uppercase;
     position: relative;
     transition: all linear .4s;
+}
+.bg .navbar ul li a{
+    line-height: 50px;
 }
 .navbar ul li a::before{
     position: absolute;
@@ -217,6 +224,10 @@ span{
     line-height: 100px;
     display: flex;
     justify-content: space-between;
+    transition: all linear .4s;
+}
+.bg .extra-nav{
+    line-height: 45px;
 }
 .extra-nav h3{
     font-family: 'Raleway', sans-serif;
@@ -1634,6 +1645,7 @@ span{
     right: 80px;
     bottom: 185px;
     display: none;
+    z-index: 9999999999;
 }
 .back-to-top i{
     width: 42px;
@@ -1650,7 +1662,7 @@ span{
     position: fixed;
     width: 100%;
     height: 100%;
-    z-index: 9999999999;
+    z-index: 99999999999999999;
     background-color: #ffffff;
 }
 .Preloader{
